# glusterfs

./: .testignore  configure.ac  glusterfs.spec.in
api/src/: glfs-mgmt.c  glfs.h
cli/src/: Makefile.am  cli-cmd-global.c  cli-cmd-misc.c  cli-cmd-parser.c  cli-cmd-peer.c  cli-cmd-volume.c  cli-rl.c  cli-rpc-ops.c  cli-xml-output.c  cli-xquotad-client.c  cli-xquotad-client.h  cli.c  cli.h
contrib/fuse-util/: Makefile.am
doc/: gluster.8  mount.glusterfs.8
events/: eventskeygen.py
events/src/: utils.py
extras/: Makefile.am
extras/LinuxRPM/: Makefile.am
extras/geo-rep/: schedule_georep.py.in
extras/hook-scripts/: S56glusterd-geo-rep-create-post.sh
extras/samba/: smb.conf
geo-replication/src/: gverify.sh  peer_mountbroker.py.in
geo-replication/syncdaemon/: gconf.py  gsyncd.py  gsyncdstatus.py  master.py  monitor.py  repce.py  resource.py  syncdutils.py
glusterfsd/src/: Makefile.am  glusterfsd-mgmt.c  glusterfsd.c  glusterfsd.h
heal/src/: glfs-heal.c
libglusterfs/src/: Makefile.am  client_t.c  client_t.h  common-utils.c  common-utils.h  compat.h  default-args.c  defaults-tmpl.c  dict.c  dict.h  event-epoll.c  event-poll.c  event.c  event.h  fd.c  glfs-message-id.h  globals.h  glusterfs.h  graph.c  inode.c  inode.h  iobuf.c  latency.c  libglusterfs-messages.h  libglusterfs.sym  logging.c  logging.h  mem-pool.c  mem-pool.h  mem-types.h  quota-common-utils.c  quota-common-utils.h  run.h  stack.c  stack.h  statedump.c  statedump.h  syncop.c  syncop.h  (+10 more)
tests/: geo-rep.rc  include.rc  volume.rc
tools/: Makefile.am
tools/gluster_usergroup_adm/src/: Makefile.am  cluster.py  conf.py  data.py  glfsSSH.py  main.py  output.py  samba-ctl.py  store.py  ugadm.conf.in  ugdata.example  utils.py
xlators/: Makefile.am
xlators/features/dir-worm/src/: Makefile.am  dir-worm-helper.c  dir-worm-helper.h  dir-worm-mem-types.h  dir-worm.c  dir-worm.h
xlators/features/xquota/src/: Makefile.am  xquota-enforcer-client.c  xquota-mem-types.h  xquota-messages.h  xquota.c  xquota.h  xquotad-aggregator.c  xquotad-aggregator.h  xquotad-helpers.c  xquotad-helpers.h  xquotad.c
(+209 files in other folders)
