gluster_usergroup_admdir = $(libexecdir)/glusterfs/gluster_usergroup_adm

gluster_usergroup_adm_PYTHON = conf.py utils.py __init__.py data.py store.py output.py cluster.py glfsSSH.py main.py

gluster_usergroup_adm_SCRIPTS = samba-ctl.py

gluster_usergroup_adm_DATA = ugadm.conf

EXTRA_DIST = ugdata.example

CLEANFILES =
